# htmx-axum-tailwindcss

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
public/css/: main.css
public/js/components/: navbar.mjs  timestamp.mjs
public/js/utils/: timers.mjs
public/scripts/: timers.mjs
src/: main.rs
src/api/: mod.rs
src/components/: headers.html  hello.html  layout.html  mod.rs  navbar.html  sysinfo.html  timestamp.html
src/routes/: dist.rs  index.html  index.rs  mod.rs
src/routes/debug/: index.html  index.rs
src/routes/home/: index.rs
src/templates/components/: hello.html  navbar.html  sys_info.html  timestamp.html
src/templates/layouts/: default.html
src/templates/views/: index.html
src/templates/views/debug/: index.html
