[package]
name = "htmx-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.26"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
sysinfo = "0.29.7"
tera = "1.19.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
